--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 /node_modules/
 /frontend/node_modules/
 /backend/node_modules/
+/material-ui-nextjs/node_modules/
 /.pnp
 .pnp.js
 
@@ -13,6 +14,7 @@
 # next.js
 /.next/
 /frontend/.next/
+/material-ui-nextjs/.next/
 /out/
 
 # production
