--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,8 @@
     "lodash": "^4.17.21",
     "morgan": "^1.10.0",
     "mysql2": "^3.6.2",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "phone": "^3.1.42",
+    "validator": "^13.11.0"
   }
 }
