--- a/.gitignore
+++ b/.gitignore
@@ -19,10 +19,26 @@
 
 # production
 /build
+/frontend/build/
+/backend/build/
+/frontend/build
+/backend/build
 
 # misc
 .DS_Store
 *.pem
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+/frontend/.env.local
+/frontend/.env.development.local
+/frontend/.env.test.local
+/frontend/.env.production.local
+/backend/.env.local
+/backend/.env.development.local
+/backend/.env.test.local
+/backend/.env.production.local
 
 # debug
 npm-debug.log*
