--- a/.gitignore
+++ b/.gitignore
@@ -28,8 +28,8 @@
 .DS_Store
 *.pem
 .env
-/frontend/.env
-/backend/.env
+frontend/.env
+backend/.env
 .env.local
 .env.development.local
 .env.test.local
