--- a/backend/package.json
+++ b/backend/package.json
@@ -16,10 +16,12 @@
     "cors": "^2.8.5",
     "dayjs": "^1.11.10",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2",
+    "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "mysql": "^2.18.1",
     "mysql2": "^3.6.2",
     "nodemon": "^3.0.1",
     "phone": "^3.1.42",
