--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -1,8 +1,19 @@
 {
-  "extends": ["eslint:recommended", "next/core-web-vitals"],
+  "extends": ["eslint:recommended", "plugin:react/recommended"],
   "plugins": ["import"],
+  "parserOptions": {
+    "ecmaVersion": 12,
+    "sourceType": "module"
+  },
+  "env": {
+    "browser": true,
+    "node": true,
+    "es2021": true
+  },
   "rules": {
-    "indent": ["warn", 2], // Use 2 spaces for indentation
+    "react/react-in-jsx-scope": "off",
+    "react/prop-types": "off",
+    "indent": ["warn", 2],
     "import/order": ["error", {
       "alphabetize": {
         "order": "asc",
