--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.7",
     "dayjs": "^1.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -31,8 +32,8 @@
   "devDependencies": {
     "customize-cra": "^1.0.0",
     "eslint": "^8.56.0",
-    "eslint-config-next": "13.5.6",
     "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-react": "^7.35.2",
     "react-app-rewire-alias": "^1.1.7",
     "react-app-rewired": "^2.2.1"
   },
