--- a/backend/package.json
+++ b/backend/package.json
@@ -44,6 +44,7 @@
     "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.10.1",
+    "@types/nodemailer": "^6.4.17",
     "@types/validator": "^13.12.2",
     "jest": "^29.7.0",
     "supertest": "^6.3.4",
