--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-app-rewired start -p 3000",
+    "serve": "react-app-rewired start -p 3000",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-scripts eject"
