--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "dayjs": "^1.11.10",
     "dotenv": "^16.3.1",
     "express": "^4.19.2",
+    "googleapis": "^123.0.0",
     "handlebars": "^4.7.8",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
