--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.6.2",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.10.0",
     "nodemon": "^3.0.1",
     "phone": "^3.1.42",
@@ -45,6 +46,7 @@
     "@types/jsonwebtoken": "^9.0.7",
     "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.12",
+    "@types/node-cron": "^3.0.11",
     "@types/node": "^22.10.1",
     "@types/nodemailer": "^6.4.17",
     "@types/validator": "^13.12.2",
