--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -71,8 +71,8 @@ jobs:
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
           source: |
-            backend.tar.gz
-            frontend.tar.gz
+            backend-build/backend.tar.gz
+            frontend-build/frontend.tar.gz
           target: ${{ secrets.EC2_DEPLOY_PATH }}
 
       - name: Deploy on EC2 via SSH
