--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -64,6 +64,11 @@ jobs:
           name: frontend-build
           path: .
 
+      - name: Relocate artifacts
+        run: |
+          mv backend-build/backend.tar.gz ./backend.tar.gz
+          mv frontend-build/frontend.tar.gz ./frontend.tar.gz
+
       - name: Copy artifacts to EC2
         uses: appleboy/scp-action@v0.1.3
         with:
@@ -71,8 +76,8 @@ jobs:
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
           source: |
-            backend-build/backend.tar.gz
-            frontend-build/frontend.tar.gz
+            backend.tar.gz
+            frontend.tar.gz
           target: ${{ secrets.EC2_DEPLOY_PATH }}
 
       - name: Deploy on EC2 via SSH
