--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,3 +1,52 @@
+name: Build & Deploy Booking CRM
+
+on:
+  push:
+    branches:
+      - master
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      # ------ Backend ------
+      - name: Setup Node.js for backend
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'
+      - name: Build and pack backend
+        working-directory: backend
+        run: |
+          npm ci
+          npm run build
+          tar czf ../backend.tar.gz dist package.json package-lock.json
+      - name: Upload backend artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: backend-build
+          path: backend.tar.gz
+
+      # ------ Frontend ------
+      - name: Setup Node.js for frontend
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'
+      - name: Build and pack frontend
+        working-directory: frontend
+        run: |
+          npm ci
+          npm run build
+          tar czf ../frontend.tar.gz build
+      - name: Upload frontend artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: frontend-build
+          path: frontend.tar.gz
+
   deploy:
     needs: build
     if: github.ref == 'refs/heads/master'
