--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,15 @@
     "test-watch": "jest --watchAll",
     "build": "tsc && tsc-alias",
     "start": "node dist/server.js",
-    "serve": "tsx watch src/server.ts"
+    "serve": "tsx watch src/server.ts",
+    "migrate:create:users": "knex migrate:make --env=development",
+    "migrate:run:users": "knex migrate:latest --env=development",
+    "migrate:create:clients": "knex migrate:make --env=client_databases",
+    "migrate:run:client": "knex migrate:latest --env=client_databases",
+    "migrate:run:clients": "node scripts/migrate-clients.js",
+    "migrate:run:users:prod": "NODE_ENV=production knex migrate:latest --env=production",
+    "migrate:run:clients:prod": "NODE_ENV=production node scripts/migrate-clients.js",
+    "migrate:deploy": "npm run migrate:run:users:prod && npm run migrate:run:clients:prod"
   },
   "keywords": [],
   "author": "",
@@ -46,11 +54,12 @@
     "@types/jsonwebtoken": "^9.0.7",
     "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.12",
-    "@types/node-cron": "^3.0.11",
     "@types/node": "^22.10.1",
+    "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.17",
     "@types/validator": "^13.12.2",
     "jest": "^29.7.0",
+    "knex": "^3.1.0",
     "supertest": "^6.3.4",
     "ts-jest": "^29.2.5",
     "tsc-alias": "^1.8.10",
