--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -107,6 +107,18 @@ jobs:
             cp backend/.env.production backend/.env
             cd backend
             npm ci --omit=dev
+
+            # Check for migration changes and run migrations if needed
+            if git diff --name-only HEAD~1 HEAD | grep -q "backend/migrations/"; then
+              echo "🔄 Migration changes detected, installing dev dependencies..."
+              npm ci
+              echo "🔄 Running database migrations..."
+              npm run migrate:deploy
+              echo "✅ Migrations completed successfully!"
+            else
+              echo "ℹ️ No migration changes found, skipping migrations..."
+            fi
+
             pm2 delete booking-backend || true
             pm2 start dist/server.js \
               --name booking-backend \
