--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -77,25 +77,13 @@ jobs:
           mv backend-build/backend.tar.gz ./backend.tar.gz
           mv frontend-build/frontend.tar.gz ./frontend.tar.gz
 
-      - name: Check for migration changes
-        id: check-migrations
-        run: |
-          if git diff --name-only HEAD~1 HEAD | grep -q "backend/migrations/"; then
-            echo "has-migrations=true" >> $GITHUB_OUTPUT
-            echo "🔍 Migration changes detected"
-            touch migrations-flag
-          else
-            echo "has-migrations=false" >> $GITHUB_OUTPUT
-            echo "ℹ️ No migration changes found"
-          fi
-
       - name: Copy artifacts to EC2
         uses: appleboy/scp-action@v0.1.3
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
-          source: backend.tar.gz,frontend.tar.gz${{ steps.check-migrations.outputs.has-migrations == 'true' && ',migrations-flag' || '' }}
+          source: backend.tar.gz,frontend.tar.gz
           target: ${{ secrets.EC2_DEPLOY_PATH }}
 
       - name: Deploy on EC2 via SSH
@@ -118,19 +106,14 @@ jobs:
             tar xzf backend.tar.gz -C backend --strip-components=1
             cp backend/.env.production backend/.env
             cd backend
-            npm ci --omit=dev
 
-            # Check for migration changes and run migrations if needed
-            if [ -f ../migrations-flag ]; then
-              echo "🔄 Migration changes detected, installing dev dependencies..."
-              npm ci
-              echo "🔄 Running database migrations..."
-              npm run migrate:deploy
-              echo "✅ Migrations completed successfully!"
-              rm -f ../migrations-flag
-            else
-              echo "ℹ️ No migration changes found, skipping migrations..."
-            fi
+            # Install all dependencies (including dev for migrations)
+            npm ci
+
+            # Always run migrations (knex migrate:latest is safe - it only runs new migrations)
+            echo "🔄 Running database migrations..."
+            npm run migrate:deploy
+            echo "✅ Migrations completed successfully!"
 
             pm2 delete booking-backend || true
             pm2 start dist/server.js \
