--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,24 +25,10 @@ jobs:
       - name: Build and pack backend
         working-directory: backend
         run: |
-          # DEBUG: Check package.json before npm ci
-          echo "🔍 DEBUG: Checking package.json scripts BEFORE npm ci:"
-          grep -A3 -B3 "migrate:deploy" package.json || echo "❌ migrate:deploy not found before npm ci!"
-
           npm ci
           npm run build
-
-          # DEBUG: Check package.json after npm ci but before tar
-          echo "🔍 DEBUG: Checking package.json scripts AFTER npm ci:"
-          grep -A3 -B3 "migrate:deploy" package.json || echo "❌ migrate:deploy not found after npm ci!"
-
           tar czf ../backend.tar.gz dist package.json package-lock.json migrations scripts knexfile.js
 
-          # DEBUG: Check what's in the tar file
-          echo "🔍 DEBUG: Checking tar contents:"
-          tar -tzf ../backend.tar.gz | head -20
-          echo "🔍 DEBUG: Checking package.json from tar:"
-          tar -xzf ../backend.tar.gz -O package.json | grep -A3 -B3 "migrate:deploy" || echo "❌ migrate:deploy not found in tar!"
       - name: Upload backend artifact
         uses: actions/upload-artifact@v4
         with:
@@ -124,11 +110,78 @@ jobs:
             sudo chmod -R 777 backend/public/images
             tar xzf backend.tar.gz -C backend --strip-components=1
 
-            # DEBUG: Check what files we have
-            echo "🔍 Files in backend after extraction:"
-            ls -la backend/
-            echo "🔍 Checking package.json scripts:"
-            grep -A3 -B3 "migrate:deploy" backend/package.json || echo "❌ migrate:deploy not found!"
+            # FORCE: Create correct package.json with migration scripts
+            cat > backend/package.json << 'EOF'
+            {
+              "name": "backend",
+              "version": "1.0.0",
+              "description": "",
+              "main": "index.js",
+              "type": "module",
+              "scripts": {
+                "test": "jest",
+                "test-watch": "jest --watchAll",
+                "build": "tsc && tsc-alias",
+                "start": "node dist/server.js",
+                "serve": "tsx watch src/server.ts",
+                "migrate:create:users": "knex migrate:make --env=development",
+                "migrate:run:users": "knex migrate:latest --env=development",
+                "migrate:create:clients": "knex migrate:make --env=client_databases",
+                "migrate:run:client": "knex migrate:latest --env=client_databases",
+                "migrate:run:clients": "node scripts/migrate-clients.js",
+                "migrate:run:users:prod": "NODE_ENV=production knex migrate:latest --env=production",
+                "migrate:run:clients:prod": "NODE_ENV=production node scripts/migrate-clients.js",
+                "migrate:deploy": "npm run migrate:run:users:prod && npm run migrate:run:clients:prod"
+              },
+              "keywords": [],
+              "author": "",
+              "license": "ISC",
+              "dependencies": {
+                "bcrypt": "^5.1.0",
+                "cors": "^2.8.5",
+                "csv-parser": "^3.0.0",
+                "dayjs": "^1.11.10",
+                "dotenv": "^16.3.1",
+                "express": "^4.19.2",
+                "googleapis": "^123.0.0",
+                "handlebars": "^4.7.8",
+                "jsonwebtoken": "^9.0.2",
+                "lodash": "^4.17.21",
+                "morgan": "^1.10.0",
+                "multer": "^1.4.5-lts.1",
+                "mysql": "^2.18.1",
+                "mysql2": "^3.6.2",
+                "node-cron": "^3.0.3",
+                "nodemailer": "^6.10.0",
+                "nodemon": "^3.0.1",
+                "phone": "^3.1.42",
+                "puppeteer": "^24.1.1",
+                "uuid": "^11.0.5",
+                "validator": "^13.11.0"
+              },
+              "devDependencies": {
+                "@types/bcrypt": "^5.0.2",
+                "@types/cors": "^2.8.17",
+                "@types/dotenv": "^8.2.3",
+                "@types/express": "^5.0.0",
+                "@types/jest": "^29.5.14",
+                "@types/jsonwebtoken": "^9.0.7",
+                "@types/morgan": "^1.9.9",
+                "@types/multer": "^1.4.12",
+                "@types/node-cron": "^3.0.11",
+                "@types/node": "^22.10.1",
+                "@types/nodemailer": "^6.4.17",
+                "@types/validator": "^13.12.2",
+                "jest": "^29.7.0",
+                "knex": "^3.1.0",
+                "supertest": "^6.3.4",
+                "ts-jest": "^29.2.5",
+                "tsc-alias": "^1.8.10",
+                "tsx": "^4.19.2",
+                "typescript": "^5.7.2"
+              }
+            }
+            EOF
 
             # Copy environment file
             cp backend/.env.production backend/.env
@@ -136,10 +189,6 @@ jobs:
 
             # Install all dependencies (including dev for migrations)
             npm ci
-
-            # DEBUG: Check package.json after npm ci
-            echo "🔍 Checking package.json scripts after npm ci:"
-            grep -A3 -B3 "migrate:deploy" package.json || echo "❌ migrate:deploy not found after npm ci!"
 
             # Always run migrations (knex migrate:latest is safe - it only runs new migrations)
             echo "🔄 Running database migrations..."
