--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,10 +12,6 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-          clean: true
-          token: ${{ secrets.GITHUB_TOKEN }}
 
       # ------ Backend ------
       - name: Setup Node.js for backend
@@ -27,8 +23,7 @@ jobs:
         run: |
           npm ci
           npm run build
-          tar czf ../backend.tar.gz dist package.json package-lock.json migrations scripts knexfile.js MIGRATIONS.md
-
+          tar czf ../backend.tar.gz dist package.json package-lock.json
       - name: Upload backend artifact
         uses: actions/upload-artifact@v4
         with:
@@ -91,7 +86,7 @@ jobs:
           source: backend.tar.gz,frontend.tar.gz
           target: ${{ secrets.EC2_DEPLOY_PATH }}
 
-      - name: Deploy to EC2
+      - name: Deploy on EC2 via SSH
         uses: appleboy/ssh-action@v0.1.5
         with:
           host: ${{ secrets.EC2_HOST }}
@@ -104,103 +99,30 @@ jobs:
             sudo chown -R $USER:$USER .
 
             # --- Backend deployment ---
-            # Clean old backend files (except public/ and .env files which contain uploaded files and secrets)
-            if [ -d "backend" ]; then
-              find backend -mindepth 1 -not -path "backend/public" -not -path "backend/public/*" -not -name ".env*" -delete
+            # Backup .env files before cleaning
+            if [ -f "backend/.env.production" ]; then
+              cp backend/.env.production /tmp/.env.production.backup
             fi
+
+            # Clean old backend files (except public/ which contains uploaded files)
+            if [ -d "backend" ]; then
+              find backend -mindepth 1 -not -path "backend/public" -not -path "backend/public/*" -delete
+            fi
+
             mkdir -p backend
             mkdir -p backend/public/images
             sudo chown -R $USER:$USER backend/public/images
             sudo chmod -R 777 backend/public/images
             tar xzf backend.tar.gz -C backend --strip-components=1
 
-            # FORCE: Create correct package.json with migration scripts
-            cat > backend/package.json << 'EOF'
-            {
-              "name": "backend",
-              "version": "1.0.0",
-              "description": "",
-              "main": "index.js",
-              "type": "module",
-              "scripts": {
-                "test": "jest",
-                "test-watch": "jest --watchAll",
-                "build": "tsc && tsc-alias",
-                "start": "node dist/server.js",
-                "serve": "tsx watch src/server.ts",
-                "migrate:create:users": "knex migrate:make --env=development",
-                "migrate:run:users": "knex migrate:latest --env=development",
-                "migrate:create:clients": "knex migrate:make --env=client_databases",
-                "migrate:run:client": "knex migrate:latest --env=client_databases",
-                "migrate:run:clients": "node scripts/migrate-clients.js",
-                "migrate:run:users:prod": "NODE_ENV=production knex migrate:latest --env=production --knexfile=./knexfile.js",
-                "migrate:run:clients:prod": "NODE_ENV=production node scripts/migrate-clients.js",
-                "migrate:deploy": "npm run migrate:run:users:prod && npm run migrate:run:clients:prod"
-              },
-              "keywords": [],
-              "author": "",
-              "license": "ISC",
-              "dependencies": {
-                "bcrypt": "^5.1.0",
-                "cors": "^2.8.5",
-                "csv-parser": "^3.0.0",
-                "dayjs": "^1.11.10",
-                "dotenv": "^16.3.1",
-                "express": "^4.19.2",
-                "googleapis": "^123.0.0",
-                "handlebars": "^4.7.8",
-                "jsonwebtoken": "^9.0.2",
-                "lodash": "^4.17.21",
-                "morgan": "^1.10.0",
-                "multer": "^1.4.5-lts.1",
-                "mysql": "^2.18.1",
-                "mysql2": "^3.6.2",
-                "node-cron": "^3.0.3",
-                "nodemailer": "^6.10.0",
-                "nodemon": "^3.0.1",
-                "phone": "^3.1.42",
-                "puppeteer": "^24.1.1",
-                "uuid": "^11.0.5",
-                "validator": "^13.11.0"
-              },
-              "devDependencies": {
-                "@types/bcrypt": "^5.0.2",
-                "@types/cors": "^2.8.17",
-                "@types/dotenv": "^8.2.3",
-                "@types/express": "^5.0.0",
-                "@types/jest": "^29.5.14",
-                "@types/jsonwebtoken": "^9.0.7",
-                "@types/morgan": "^1.9.9",
-                "@types/multer": "^1.4.12",
-                "@types/node-cron": "^3.0.11",
-                "@types/node": "^22.10.1",
-                "@types/nodemailer": "^6.4.17",
-                "@types/validator": "^13.12.2",
-                "jest": "^29.7.0",
-                "knex": "^3.1.0",
-                "supertest": "^6.3.4",
-                "ts-jest": "^29.2.5",
-                "tsc-alias": "^1.8.10",
-                "tsx": "^4.19.2",
-                "typescript": "^5.7.2"
-              }
-            }
-            EOF
-
-            # Environment file should already exist on server
+            # Restore .env.production if it existed
+            if [ -f "/tmp/.env.production.backup" ]; then
+              cp /tmp/.env.production.backup backend/.env.production
+              cp backend/.env.production backend/.env
+              rm /tmp/.env.production.backup
+            fi
             cd backend
-
-            # Install all dependencies (including dev for migrations)
-            # Use npm install instead of npm ci because we modified package.json
-            npm install
-
-            # Migrations are available but not run automatically
-            # To run migrations manually on EC2:
-            # 1. cd to backend directory
-            # 2. npm run migrate:deploy
-            echo "ℹ️  Migrations are available but not run automatically for safety"
-            echo "ℹ️  To run migrations manually: cd backend && npm run migrate:deploy"
-
+            npm ci --omit=dev
             pm2 delete booking-backend || true
             pm2 start dist/server.js \
               --name booking-backend \
