fix: correct server.js path in deployment workflow
- Updated the path for starting the backend server in the deployment workflow from 'dist/server.js' to 'server.js' for proper execution.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -113,7 +113,7 @@ jobs:
             cd backend
             npm ci --omit=dev
             pm2 delete booking-backend || true
-            pm2 start dist/server.js \
+            pm2 start server.js \
               --name booking-backend \
               --cwd ${{ secrets.EC2_DEPLOY_PATH }}/backend \
               --env production
