feat: enhance backend deployment workflow with email templates
- Added a step to create the directory for email templates in the temporary backend directory.
- Included copying of email templates from the source to the temporary backend for deployment consistency.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,6 +29,8 @@ jobs:
           cp knexfile.js ../temp-backend/
           cp -r migrations ../temp-backend/
           cp -r scripts ../temp-backend/
+          mkdir -p ../temp-backend/src/templates
+          cp -r src/templates/emails ../temp-backend/src/templates/
           cd ..
           tar czf backend.tar.gz -C temp-backend .
           rm -rf temp-backend
