--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,6 +29,8 @@ jobs:
           cp knexfile.js ../temp-backend/
           cp -r migrations ../temp-backend/
           cp -r scripts ../temp-backend/
+          mkdir -p ../temp-backend/dist/src/templates
+          cp -r src/templates/emails ../temp-backend/dist/src/templates/
           cd ..
           tar czf backend.tar.gz -C temp-backend .
           rm -rf temp-backend
