[BE] Update deployment workflow and fix dayjs locale import
- Changed `npm ci --omit=dev` to `npm ci` in the deployment workflow for consistent package installation.
- Updated dayjs locale import from `dayjs/locale/de` to `dayjs/locale/de.js` for correct module resolution.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -154,7 +154,7 @@ jobs:
             fi
 
             cd backend
-            npm ci --omit=dev
+            npm ci
 
             echo "Checking email templates..."
             ls -la resources/templates/emails/
