--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,8 @@
     "migrate:run:clients": "node scripts/migrate-clients.js",
     "migrate:run:users:prod": "NODE_ENV=production knex migrate:latest --env=production",
     "migrate:run:clients:prod": "NODE_ENV=production node scripts/migrate-clients.js",
-    "migrate:deploy": "npm run migrate:run:users:prod && npm run migrate:run:clients:prod"
+    "migrate:deploy": "npm run migrate:run:users:prod && npm run migrate:run:clients:prod",
+    "lint": "eslint 'src/**/*.{ts,js}'"
   },
   "keywords": [],
   "author": "",
@@ -46,6 +47,7 @@
     "validator": "^13.11.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.31.0",
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/dotenv": "^8.2.3",
@@ -58,6 +60,10 @@
     "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.17",
     "@types/validator": "^13.12.2",
+    "@typescript-eslint/eslint-plugin": "^8.36.0",
+    "@typescript-eslint/parser": "^8.36.0",
+    "eslint": "^9.31.0",
+    "eslint-plugin-import": "^2.32.0",
     "jest": "^29.7.0",
     "knex": "^3.1.0",
     "supertest": "^6.3.4",
@@ -67,4 +73,3 @@
     "typescript": "^5.7.2"
   }
 }
-
