[BE] Add new linter rules

--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,8 @@
     "migrate:run:users:prod": "NODE_ENV=production knex migrate:latest --env=production",
     "migrate:run:clients:prod": "NODE_ENV=production node scripts/migrate-clients.js",
     "migrate:deploy": "npm run migrate:run:users:prod && npm run migrate:run:clients:prod",
-    "lint": "eslint 'src/**/*.{ts,js}'"
+    "lint": "eslint 'src/**/*.{ts,js}'",
+    "lint-fix": "eslint 'src/**/*.{ts,js}' --fix"
   },
   "keywords": [],
   "author": "",
