--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -45,6 +45,8 @@
       }
     }],
     "comma-dangle": ["error", "always-multiline"],
+    "react/jsx-closing-bracket-location": ["error", "tag-aligned"],
+    "react/jsx-closing-tag-location": "error",
     "object-curly-spacing": ["error", "always"],
     "react/jsx-first-prop-new-line": ["error", "multiline"],
     "react/jsx-max-props-per-line": ["error", { "maximum": 1 }],
